k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-prod 
spec:
  tls:
  - hosts:
    - hello-world-aks.ghamacha.com
    secretName: hello-world-aks-ghamacha-tls-secret
  rules:
  - host: hello-world-aks.ghamacha.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: hello-world-aks
            port:
              number: 80
